# name_disambiguation

./: .gitignore  README.md  pyproject.toml
src/name_matcher/: __init__.py  __main__.py  canonical.py  comparison.py  llm.py  nicknames.py  normalization.py  pipeline.py  runner.py  structures.py
src/name_matcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_canonical.py  test_comparison.py  test_normalization.py
